--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -38,6 +38,6 @@ jobs:
         run: terraform plan
 
       - name: Terraform apply infrastructure
-        run: terraform apply 
+        run: terraform apply -auto-approve
 
       
