--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -37,7 +37,10 @@ jobs:
         id: plan
         run: terraform plan
 
-      - name: Terraform apply infrastructure
-        run: terraform apply -auto-approve
+      # - name: Terraform apply infrastructure
+      #   run: terraform apply -auto-approve
+
+      - name: Terraform destroy infrastructure
+        run: terraform destroy -auto-approve
 
       
